color input adjustements

--- a/live_config.html
+++ b/live_config.html
@@ -379,4 +379,8 @@ document.addEventListener('DOMContentLoaded', function(){
         background : transparent;
     }
 
+    input[type="color"] {
+        min-height: 30px;
+    }
+
 </style>
