Use better dingbats glyphes, older in unicode
Better way to change time position on mobile #25

--- a/src/template.html
+++ b/src/template.html
@@ -31,11 +31,11 @@
 				</div>
 				<div class="handheld-nav">
 					<button type="button" class="restart">&#65039;⏮</button>
-					<button type="button" class="fastreward">&#65039;⯬</button>
-					<button type="button" class="reward">&#65039;⏪</button>
+					<button type="button" class="fastreward">&#65039;⏪</button>
+					<button type="button" class="reward">&#65039;←</button>
 					<input type="time" step="1" min="0:00" class="inputtime" />
-					<button type="button" class="foward">&#65039;⏩</button>
-					<button type="button" class="fastfoward">&#65039;⯮</button>
+					<button type="button" class="foward">&#65039;→</button>
+					<button type="button" class="fastfoward">&#65039;⏩</button>
 				</div>
 				<div class="line">
 					<div class="time">
