--- a/src/template.html
+++ b/src/template.html
@@ -31,11 +31,32 @@
 				</div>
 				<div class="handheld-nav">
 					<button type="button" class="restart">&#65039;⏮</button>
-					<button type="button" class="fastreward">&#65039;⏪</button>
-					<button type="button" class="reward">&#65039;←</button>
+					<button type="button" class="fastreward">
+						<svg viewBox="0 0 32 32">
+							<path d="M 8,0 0,8 8,16 z" />
+							<path d="M 16,0 8,8 16,16 z" />
+							<path d="M 24,0 16,8 24,16 z" />
+						</svg>
+					</button>
+					<button type="button" class="reward">
+						<svg viewBox="0 0 32 32">
+							<path d="M 8,0 0,8 8,16 z" />
+							<path d="M 16,0 8,8 16,16 z" />
+						</svg></button>
 					<input type="time" step="1" min="0:00" class="inputtime" />
-					<button type="button" class="foward">&#65039;→</button>
-					<button type="button" class="fastfoward">&#65039;⏩</button>
+					<button type="button" class="foward">
+						<svg viewBox="0 0 32 32">
+							<path d="M 0,0 8,8 0,16 z" />
+							<path d="M 8,0 16,8 8,16 z" />
+						</svg>
+					</button>
+					<button type="button" class="fastfoward">
+						<svg viewBox="0 0 32 32">
+							<path d="M 0,0 8,8 0,16 z" />
+							<path d="M 8,0 16,8 8,16 z" />
+							<path d="M 16,0 24,8 16,16 z" />
+						</svg>
+					</button>
 				</div>
 				<div class="line">
 					<div class="time">
