Share toolbar is too wide #43

--- a/src/template.html
+++ b/src/template.html
@@ -126,7 +126,7 @@
 						<path d="M 6,6 26,6 16,26 z" />
 						<rect x="6" y="22" width="20" height="4" />
 					</svg>
-					<span>${__.download}</span></a>
+					<span class="nosmall">${__.download}</span></a>
 				<a class="back" title="${__.back}">${__.back}</a>
 			</div>
 		</div>
