Add a "×" symbol for back from actions panel

--- a/src/template.html
+++ b/src/template.html
@@ -127,7 +127,13 @@
 						<rect x="6" y="22" width="20" height="4" />
 					</svg>
 					<span class="nosmall">${__.download}</span></a>
-				<a class="back" title="${__.back}">${__.back}</a>
+				<a class="back" title="${__.back}">
+					<svg viewBox="0 0 32 32">
+						<path d="M 9,8 24,23 23,24 8,9 z" />
+						<path d="M 9,24 24,9 23,8 8,23 z" />
+					</svg>
+					<span class="nosmall">${__.back}</span>
+				</a>
 			</div>
 		</div>
 	</div>
