Add a11y role="alert|progressbar" #45

--- a/src/template.html
+++ b/src/template.html
@@ -1,7 +1,7 @@
 <div id="interface" tabindex="0">
 	<div class="principal">
 		<img id="poster" class="nosmall" src="" alt="" />
-		<div id="pageerror">
+		<div id="pageerror" role="alert”>
 		</div>
 		<div id="pagemain">
 			<a id="control" tabindex="0">
@@ -68,7 +68,7 @@
 				<div id="line">
 					<div id="time">
 						<div id="loadingline"></div>
-						<div id="elapsedline"></div>
+						<div id="elapsedline" role="progressbar”></div>
 						<div id="points">
 							<svg id="pointstart" viewBox="0 0 2 5" aria-hidden="true">
 								<path d="M 0,0 2,0 1,1 1,4 2,5 0,5 z" />
