--- a/src/template.html
+++ b/src/template.html
@@ -77,6 +77,7 @@
 								<path d="M 2,0 0,0 1,1 1,4 0,5 2,5 z" />
 							</svg>
 						</div>
+						<div id="preview"></div>
 						<time id="popup">--:--</time>
 					</div>
 				</div>
