Better way to change time position on mobile #25

--- a/src/template.html
+++ b/src/template.html
@@ -50,7 +50,7 @@
 							<path d="M 16,0 8,8 16,16 z" />
 						</svg>
 					</button>
-					<input type="time" step="1" min="0:00" id="inputtime" />
+					<input type="time" step="1" min="0:00" id="inputtime" class="nosmallest" />
 					<button type="button" id="foward">
 						<svg viewBox="0 0 24 16" aria-hidden="true">
 							<path d="M 0,0 8,8 0,16 z" />
