Add a timeline with preview chapters

--- a/src/template.html
+++ b/src/template.html
@@ -78,6 +78,7 @@
 							</svg>
 						</div>
 						<div id="preview"></div>
+						<div id="chaptersline" role="progressbar" class="nosmall"></div>
 						<time id="popup">--:--</time>
 					</div>
 				</div>
