Old standing bug in tests due to browsers autoplay policy

--- a/tests-browser.html
+++ b/tests-browser.html
@@ -22,7 +22,7 @@
 	</ul>
 
 	<cpu-audio>
-		<audio id="track" controls="controls" preload="auto">
+		<audio id="track" controls="controls" preload="auto" muted="muted">
 			<source src="./tests-assets/blank.mp3" type="audio/mpeg" />
 		</audio>
 	</cpu-audio>
