--- a/tests-interface.html
+++ b/tests-interface.html
@@ -23,7 +23,7 @@
 	</ul>
 
 	<cpu-audio canonical="https://dascritch.net/post/2014/09/03/Timecodehash-%3A-Lier-vers-un-moment-d-un-sonore">
-		<audio id="track" controls="controls" preload="auto">
+		<audio id="track" controls="controls" preload="auto" muted="muted">
 			<source src="./tests-assets/blank.mp3" type="audio/mpeg" />
 		</audio>
 	</cpu-audio>
