--- a/iframe_for_dimension.html
+++ b/iframe_for_dimension.html
@@ -3,6 +3,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <script src="dist/cpu-audio.js"></script>
+    <style type="text/css">body {background : #ddd;}</style>
 
 <cpu-audio
     title="Constrained size"
