Breakpoints are not editable : unuseful

--- a/live_config.html
+++ b/live_config.html
@@ -159,10 +159,10 @@
     <table>
         <thead>
             <tr>
-                <th>Breakpoints</th>
+                <th scope="row">Breakpoints</th>
                 <th colspan="2">wider</th>
-                <th colspan="2"><input name="css_breakpoint[1]" type="text" value="640px"></th>
-                <th colspan="2"><input name="css_breakpoint[2]" type="text" value="480px"></th>
+                <th colspan="2"><input disabled name="css_breakpoint[1]" type="text" value="640px" /></th>
+                <th colspan="2"><input disabled name="css_breakpoint[2]" type="text" value="480px" /></th>
                 <th>smaller</th>
             </tr>
         </thead>
