--- a/src/template.html
+++ b/src/template.html
@@ -38,13 +38,13 @@
 							<path d="M 24,0 16,8 24,16 z" />
 						</svg>
 					</button>
-					<button type="button" id="reward">
+					<button type="button" id="reward" class="nosmallest">
 						<svg viewBox="0 0 24 16" aria-hidden="true">
 							<path d="M 8,0 0,8 8,16 z" />
 							<path d="M 16,0 8,8 16,16 z" />
 						</svg>
 					</button>
-					<input type="time" step="1" min="0:00" id="inputtime" class="nosmallest" />
+					<input type="time" step="1" min="0:00" id="inputtime" class="nosmaller" />
 					<button type="button" id="foward">
 						<svg viewBox="0 0 24 16" aria-hidden="true">
 							<path d="M 0,0 8,8 0,16 z" />
