--- a/live_config.html
+++ b/live_config.html
@@ -174,7 +174,7 @@
                 <th scope="row" colspan="2">Time indicator width</th>
                 <td colspan="2"><input name="css_elapse-width[0]" type="text" value="185px" /></td>
                 <td colspan="2"><input name="css_elapse-width[1]" type="text" value="160px" /></td>
-                <td colspan="2"><input id="css_elapse-width[2]" name="css_elapse-width[2]" type="text" value="80px" /></td>
+                <td colspan="2"><input name="css_elapse-width[2]" type="text" value="80px" /></td>
             </tr>
             <tr>
                 <th scope="row" colspan="2">Font size</th>
