--- a/iframe_for_dimension.html
+++ b/iframe_for_dimension.html
@@ -3,15 +3,14 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <script src="dist/cpu-audio.js"></script>
-    <style type="text/css">body {background : #ddd;}</style>
+    <style type="text/css">body {background : #bbb;}</style>
 
 <cpu-audio
     title="Constrained size"
     poster="https://dascritch.net/vrac/.blog2/entendu/.1404-SambaResille_m.jpg"
     canonical="https://dascritch.net/post/2014/04/08/Au-Carnaval-avec-Samba-R%C3%A9sille">
-    
     <audio controls id="iframed">
-        <source src="https://dascritch.net/vrac/sonores/podcast/1404-SambaResille2003.mp3" type="audio/mpeg">
+        <source src="./tests-assets/blank.mp3" type="audio/mpeg" />
     </audio>
 </cpu-audio>
 
