--- a/tests-api.html
+++ b/tests-api.html
@@ -13,8 +13,9 @@
 <body>
 
 	<p><a href=".">CPU-Audio Webcomponent</a></p>
+
 	<p>
-		This is the graphic interface, working only web the webcomponent is fully supported by the browser.
+		This is the API tests. The playeur is not intented to be human-manipulated, so is hidden.
 	</p>
 	<p>
 		See also :
@@ -26,19 +27,12 @@
 		<li><a href="./tests-api.html">API</a></li>
 	</ul>
 
-	<cpu-audio canonical="https://dascritch.net/post/2014/09/03/Timecodehash-%3A-Lier-vers-un-moment-d-un-sonore">
-		<audio id="track" controls="controls" preload="auto" muted="muted">
-			<source src="./tests-assets/blank.mp3" type="audio/mpeg" />
-		</audio>
-	</cpu-audio>
-
 	<div id="playground"></div>	
+
 
 	<div id="qunit"></div>
 	<div id="qunit-fixture"></div>
 	<script src="tests/qunit.js"></script>
-	<script src="tests/tests-interface.js"></script>
-
-
+	<script src="tests/tests-api.js"></script>
 </body>
 </html>
