--- a/tests-api.html
+++ b/tests-api.html
@@ -27,6 +27,14 @@
 		<li><a href="./tests-api.html">API</a></li>
 	</ul>
 
+
+	<cpu-audio mode="hidden">
+		<audio id="track" controls="controls" preload="auto" muted="muted">
+			<source src="./tests-assets/blank.mp3" type="audio/mpeg" />
+		</audio>
+	</cpu-audio>
+
+
 	<div id="playground"></div>	
 
 
