Poster should be hideable, as in live-chapter feature

--- a/live_chapters.html
+++ b/live_chapters.html
@@ -2,7 +2,8 @@
 <script src="./dist/cpu-audio.js" async></script>
 
 <cpu-audio 
-    title="First, Choose an URL for source">
+    title="First, Choose an URL for source"
+    hide="poster,actions">
     <audio controls id="sound">
         <source src="./tests-assets/blank.mp3" type="audio/mpeg" />
         <track kind="chapters" src="" default />
